--- a/monitor.html
+++ b/monitor.html
@@ -32,9 +32,6 @@
             background: #4b4644;
             color: white;
         }
-        .layui-collapse li{
-            color: white;
-        }
         .layui-colla-item{
             border-color: #7f7a78;
         }
@@ -112,6 +109,40 @@
             border-color: #1E9FFF;
             color: #333;
         }
+        .bg_blue{
+            background: #1E9FFF;
+            color: white;
+            border-color: #1E9FFF;
+        }
+        .bg_blue:hover{
+            color: white;
+        }
+        .group{
+            color: #c6bfbb;
+        }
+        .group .title_dev_name{
+            cursor: pointer;
+        }
+
+        .group ul{
+            margin-left: 20px;
+            color: #d6cfcb;
+        }
+        .group ul li{
+            margin: 5px 0;
+            cursor: pointer;
+        }
+        .group li:hover,.group .title_dev_name:hover{
+            color: white;
+        }
+        .active{
+            color: #fff;
+        }
+        .active_yue{
+            color: #fff;
+            background: #01AAED;
+            border: 1px solid #01AAED;
+        }
     </style>
 </head>
 <body>
@@ -119,7 +150,7 @@
         <div class="header_content">
             <div class="header_left">
                 <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt="">缅甸佛塔监测系统</a></div>
-                <ul class="layui-nav layui-bg-blue" >
+                <ul class="layui-nav layui-bg-blue">
                     <li class="layui-nav-item layui-this"><a href="./monitor.html">监测数据</a></li>
                     <li class="layui-nav-item"><a href="./report_form.html">统计报表</a></li>
                     <li class="layui-nav-item"><a href="./alarm.html">监测报警</a></li>
@@ -138,25 +169,69 @@
     </div>
     <div class="content">
         <div class="left">
-            <div class="layui-collapse">
+            <div class="layui-collapse" lay-accordion="">
                 <div class="layui-colla-item">
                     <h2 class="layui-colla-title">1号塔</h2>
                     <div class="layui-colla-content layui-show">
-                        <ul>
-                            <li>1</li>
-                            <li>2</li>
-                            <li>3</li>
-                        </ul>
+                        <div class="group">
+                            <p class="title_dev_name">倾角计</p>
+                            <ul>
+                                <li>倾角计Q5</li>
+                                <li>倾角计Q6</li>
+                                <li>倾角计Q7</li>
+                                <li>倾角计Q8</li>
+                            </ul>
+                        </div>
+                        <div class="group">
+                            <p class="title_dev_name">静力水准仪</p>
+                            <ul>
+                                <li>静力水准仪J5</li>
+                                <li>静力水准仪J6</li>
+                                <li>静力水准仪J7</li>
+                                <li>静力水准仪J8</li>
+                            </ul>
+                        </div>
+                        <div class="group">
+                            <p class="title_dev_name">裂缝计</p>
+                            <ul>
+                                <li>裂缝计L1</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="layui-colla-item">
                     <h2 class="layui-colla-title">2号塔</h2>
-                    <div class="layui-colla-content layui-show">
-                        <ul>
-                            <li>a</li>
-                            <li>b</li>
-                            <li>c</li>
-                        </ul>
+                    <div class="layui-colla-content">
+                        <div class="group">
+                            <p class="title_dev_name">表面弦式应变计</p>
+                            <ul>
+                                <li>表面弦式应变计Y2</li>
+                            </ul>
+                        </div>
+                        <div class="group">
+                            <p class="title_dev_name">倾角计</p>
+                            <ul>
+                                <li>倾角计Q5</li>
+                                <li>倾角计Q6</li>
+                                <li>倾角计Q7</li>
+                                <li>倾角计Q8</li>
+                            </ul>
+                        </div>
+                        <div class="group">
+                            <p class="title_dev_name">静力水准仪</p>
+                            <ul>
+                                <li>静力水准仪J5</li>
+                                <li>静力水准仪J6</li>
+                                <li>静力水准仪J7</li>
+                                <li>静力水准仪J8</li>
+                            </ul>
+                        </div>
+                        <div class="group">
+                            <p class="title_dev_name">裂缝计</p>
+                            <ul>
+                                <li>裂缝计L1</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
@@ -181,19 +256,29 @@
             <div class="data_dev shadow">
                 <p class="btn_yue">
                     <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
-                    <span class="layui-btn layui-btn-primary layui-btn-sm">日</span>
+                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
                 </p>
                 <div id="jingli"></div>
             </div>
             <p class="title_dev">倾角计</p>
             <div class="data_dev shadow">
+                <p class="btn_yue">
+                    <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
+                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
+                </p>
                 <div id="qingjiao"></div>
             </div>
             <p class="title_dev">裂缝计</p>
-            <div class="data_dev shadow"></div>
-
+            <div class="data_dev shadow">
+                <p class="btn_yue">
+                    <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
+                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
+                </p>
+                <div id="liefeng"></div>
+            </div>
         </div>
     </div>
+
 </body>
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery.cookie.js"></script>
