--- a/monitor.html
+++ b/monitor.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./layui/css/layui.css">
     <link rel="stylesheet" href="./css/header.css">
+
     <title>缅甸佛塔监测系统</title>
     <style>
         body{
@@ -118,7 +119,7 @@
             color: white;
         }
         .group{
-            color: #c6bfbb;
+            color: #bab3af;
         }
         .group .title_dev_name{
             cursor: pointer;
@@ -126,7 +127,7 @@
 
         .group ul{
             margin-left: 20px;
-            color: #d6cfcb;
+            color: #c3bcb8;
         }
         .group ul li{
             margin: 5px 0;
@@ -170,11 +171,11 @@
     <div class="content">
         <div class="left">
             <div class="layui-collapse" lay-accordion="">
-                <div class="layui-colla-item">
-                    <h2 class="layui-colla-title">1号塔</h2>
+                <div class="layui-colla-item ta1040B0001" >
+                    <h2 class="layui-colla-title" id="ta1"><p>1#</p></h2>
                     <div class="layui-colla-content layui-show">
                         <div class="group">
-                            <p class="title_dev_name">倾角计</p>
+                            <p class="title_dev_name">--</p>
                             <ul>
                                 <li>倾角计Q5</li>
                                 <li>倾角计Q6</li>
@@ -183,7 +184,7 @@
                             </ul>
                         </div>
                         <div class="group">
-                            <p class="title_dev_name">静力水准仪</p>
+                            <p class="title_dev_name">--</p>
                             <ul>
                                 <li>静力水准仪J5</li>
                                 <li>静力水准仪J6</li>
@@ -192,46 +193,17 @@
                             </ul>
                         </div>
                         <div class="group">
-                            <p class="title_dev_name">裂缝计</p>
+                            <p class="title_dev_name">--</p>
                             <ul>
                                 <li>裂缝计L1</li>
                             </ul>
                         </div>
                     </div>
                 </div>
-                <div class="layui-colla-item">
-                    <h2 class="layui-colla-title">2号塔</h2>
+                <div class="layui-colla-item ta1040B0002">
+                    <h2 class="layui-colla-title" id="ta2"><p>2#</p></h2>
                     <div class="layui-colla-content">
-                        <div class="group">
-                            <p class="title_dev_name">表面弦式应变计</p>
-                            <ul>
-                                <li>表面弦式应变计Y2</li>
-                            </ul>
-                        </div>
-                        <div class="group">
-                            <p class="title_dev_name">倾角计</p>
-                            <ul>
-                                <li>倾角计Q5</li>
-                                <li>倾角计Q6</li>
-                                <li>倾角计Q7</li>
-                                <li>倾角计Q8</li>
-                            </ul>
-                        </div>
-                        <div class="group">
-                            <p class="title_dev_name">静力水准仪</p>
-                            <ul>
-                                <li>静力水准仪J5</li>
-                                <li>静力水准仪J6</li>
-                                <li>静力水准仪J7</li>
-                                <li>静力水准仪J8</li>
-                            </ul>
-                        </div>
-                        <div class="group">
-                            <p class="title_dev_name">裂缝计</p>
-                            <ul>
-                                <li>裂缝计L1</li>
-                            </ul>
-                        </div>
+
                     </div>
                 </div>
 
@@ -252,38 +224,43 @@
                 <div class="shadow"></div>
             </div>
 
-            <p class="title_dev">静力水准仪</p>
-            <div class="data_dev shadow">
-                <p class="btn_yue">
-                    <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
-                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
-                </p>
-                <div id="jingli"></div>
+            <div class="right_content">
+                <!--<p class="title_dev">倾角计</p>
+                <div class="data_dev shadow">
+                    <p class="btn_yue">
+                        <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
+                        <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
+                    </p>
+                    <div id="qingjiao"></div>
+                </div>
+                <p class="title_dev">裂缝计</p>
+                <div class="data_dev shadow">
+                    <p class="btn_yue">
+                        <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
+                        <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
+                    </p>
+                    <div id="liefeng"></div>
+                </div>
+                <p class="title_dev">静力水准仪</p>
+                <div class="data_dev shadow">
+                    <p class="btn_yue">
+                        <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
+                        <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
+                    </p>
+                    <div id="jingli"></div>
+                </div>-->
             </div>
-            <p class="title_dev">倾角计</p>
-            <div class="data_dev shadow">
-                <p class="btn_yue">
-                    <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
-                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
-                </p>
-                <div id="qingjiao"></div>
-            </div>
-            <p class="title_dev">裂缝计</p>
-            <div class="data_dev shadow">
-                <p class="btn_yue">
-                    <span class="layui-btn layui-btn-primary layui-btn-sm">月</span>
-                    <span class="layui-btn layui-btn-primary layui-btn-sm bg_blue">日</span>
-                </p>
-                <div id="liefeng"></div>
-            </div>
+
         </div>
     </div>
 
 </body>
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery.cookie.js"></script>
-<script src="./js/echarts.min.js"></script>
+<script src="./js/echarts.js"></script>
+<!--<script src="./js/echarts.min.js"></script> 不能显示所有点-->
 <script src="./layui/layui.js"></script>
+<script src="./js/function.js"></script>
 <script src="./js/header.js"></script>
 <script src="./js/monitor.js"></script>
 </html>
