--- a/alarm.html
+++ b/alarm.html
@@ -27,26 +27,33 @@
 </head>
 <body>
     <div class="header">
-        <div class="header_content">
+    <div class="header_content">
         <div class="header_left">
-            <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt="">缅甸佛塔监测系统</a></div>
+            <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt=""><i>--</i></a></div>
             <ul class="layui-nav layui-bg-blue" >
-                <li class="layui-nav-item"><a href="./monitor.html">监测数据</a></li>
-                <li class="layui-nav-item"><a href="./report_form.html">统计报表</a></li>
-                <li class="layui-nav-item layui-this"><a href="./alarm.html">监测报警</a></li>
+                <li class="layui-nav-item">
+                    <a href="./monitor.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="./report_form.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
+                <li class="layui-nav-item layui-this">
+                    <a href="./alarm.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
             </ul>
         </div>
         <div class="header_right">
-            <div style="display: none" class="user">用户名：<span></span></div>
+            <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
             <div class="logout"></div>
             <ul class="language">
-                <li class="language_btn"><a href="#">中文</a></li>
-                <li class="language_btn"><a href="#" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
-                <li class="language_btn language_btn_right"><a href="#">မြန်မာ</a></li>
+                <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
+                <li class="language_btn"><a onclick="changeLang('en')" href="javascript:;" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
+                <li class="language_btn language_btn_right"><a onclick="changeLang('my')" href="javascript:;">မြန်မာ</a></li>
             </ul>
         </div>
     </div>
-    </div>
+
+</div>
     <div class="content shadow">
         <p>监测预警</p>
         <hr>
@@ -82,6 +89,6 @@
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery.cookie.js"></script>
 <script src="./layui/layui.js"></script>
+<script src="./js/config_lang.js"></script>
 <script src="./js/header.js"></script>
-<script type="module" src="./dist/despComponent.min.js"></script>
 </html>
