--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
         }
         .body{
             width: 100%;
-            height: 526px;
-            background: url("./img/back.png") no-repeat center;
-            padding-top: 80px;
+            /*height: 526px;*/
+            height: 100%;
+            /*background: url("./img/back.jpg") no-repeat center top;*/
+            /*padding-top: 180px;*/
+        }
+        .body img{
+            width: 100%;
+            height: 100%;
         }
     </style>
 </head>
@@ -24,40 +29,42 @@
     <div class="header">
         <div class="header_content">
             <div class="header_left">
-                <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt="">缅甸佛塔监测系统</a></div>
+                <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt=""><i>--</i></a></div>
                 <ul class="layui-nav layui-bg-blue" >
                     <li class="layui-nav-item">
-                        <a href="./monitor.html" onclick="return isLogin()">监测数据</a>
+                        <a href="./monitor.html" onclick="return isLogin()"><i>--</i></a>
                     </li>
                     <li class="layui-nav-item">
-                        <a href="./report_form.html" onclick="return isLogin()">统计报表</a>
+                        <a href="./report_form.html" onclick="return isLogin()"><i>--</i></a>
                     </li>
                     <li class="layui-nav-item">
-                        <a href="./alarm.html" onclick="return isLogin()">监测报警</a>
+                        <a href="./alarm.html" onclick="return isLogin()"><i>--</i></a>
                     </li>
                 </ul>
             </div>
             <div class="header_right">
-                <div style="display: none" class="user">用户名：<span></span></div>
+                <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
                 <div class="logout"></div>
                 <ul class="language">
-                    <li class="language_btn"><a href="#">中文</a></li>
-                    <li class="language_btn"><a href="#" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
-                    <li class="language_btn language_btn_right"><a href="#">မြန်မာ</a></li>
+                    <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
+                    <li class="language_btn"><a onclick="changeLang('en')" href="javascript:;" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
+                    <li class="language_btn language_btn_right"><a onclick="changeLang('my')" href="javascript:;">မြန်မာ</a></li>
                 </ul>
             </div>
         </div>
 
     </div>
     <div class="body">
-
+        <img src="./img/back.jpg" alt="">
     </div>
 </body>
 <!--<script src="./js/layui.all.js"></script>-->
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery.cookie.js"></script>
 <script src="./layui/layui.js"></script>
+<script src="./js/config_lang.js"></script>
 <script src="./js/header.js"></script>
+
 
 </html>
 <script type="text/javascript">
