--- a/report_form.html
+++ b/report_form.html
@@ -22,45 +22,56 @@
         .date_form ul li{
             margin: 10px 0;
         }
+        .date_form ul li i{
+            display: inline-block;
+            width: 96px;
+            text-align: right;
+        }
         .date_form input{
-            background: transparent url("./img/ico/date.png") no-repeat 144px center;
+            background: transparent url("./img/ico/date.png") no-repeat 138px center;
             border: 1px solid #c8c8c8;
             height: 20px;
-            padding: 0 0 0 8px;
+            padding: 0 0 0 2px;
             margin-right: 50px;
         }
     </style>
 </head>
 <body>
     <div class="header">
-        <div class="header_content">
+    <div class="header_content">
         <div class="header_left">
-            <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt="">缅甸佛塔监测系统</a></div>
+            <div class="logo"><a href="./index.html"><img src="./img/logo.png" alt=""><i>--</i></a></div>
             <ul class="layui-nav layui-bg-blue" >
-                <li class="layui-nav-item"><a href="./monitor.html">监测数据</a></li>
-                <li class="layui-nav-item layui-this"><a href="./report_form.html">统计报表</a></li>
-                <li class="layui-nav-item"><a href="./alarm.html">监测报警</a></li>
+                <li class="layui-nav-item">
+                    <a href="./monitor.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
+                <li class="layui-nav-item layui-this">
+                    <a href="./report_form.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
+                <li class="layui-nav-item">
+                    <a href="./alarm.html" onclick="return isLogin()"><i>--</i></a>
+                </li>
             </ul>
         </div>
         <div class="header_right">
-            <div style="display: none" class="user">用户名：<span></span></div>
+            <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
             <div class="logout"></div>
             <ul class="language">
-                <li class="language_btn"><a href="#">中文</a></li>
-                <li class="language_btn"><a href="#" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
-                <li class="language_btn language_btn_right"><a href="#">မြန်မာ</a></li>
+                <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
+                <li class="language_btn"><a onclick="changeLang('en')" href="javascript:;" style="font-family: '微软雅黑 Light'">ENGLISH</a></li>
+                <li class="language_btn language_btn_right"><a onclick="changeLang('my')" href="javascript:;">မြန်မာ</a></li>
             </ul>
         </div>
     </div>
-    </div>
+</div>
     <div class="content shadow">
         <br/><hr/>
         <div class="date_form">
             <ul>
-                <li>起始时间 <input type="text" id="start"></li>
-                <li>结束时间 <input type="text" id="end">
-                    <div class="layui-btn layui-btn-normal layui-btn-sm">生成报表</div>
-                    <div class="layui-btn layui-btn-normal layui-btn-sm">
+                <li> <i>--</i> <input type="text" id="start"></li>
+                <li> <i>--</i> <input type="text" id="end">
+                    <div class="layui-btn layui-btn-normal layui-btn-sm shengcheng">--</div>
+                    <div class="layui-btn layui-btn-normal layui-btn-sm xiazai">
                         <a style="display: block;color: white" class="word_export" href="javascript:void(0)">下载报表</a>
                     </div>
                 </li>
@@ -71,6 +82,13 @@
 
                 <p>这是一段文字</p>
                 <img src="./img/dataImg/t2_l.png" alt="" style="height: 200px">
+                <div class="" style="width: 500px;height: 300px;border: 2px solid #f00;
+                     display: none" id="aaa">
+                </div>
+                <div style="width: 500px;height: 300px;border: 2px solid #0000FF;background: white;" >
+                    <img style="width: 500px;height: 300px;" id="a" src="" alt="">
+                </div>
+                <div id="ntexport">下载测试</div>
                 <table border="1">
                     <tr>
                         <td>1</td>
@@ -95,30 +113,17 @@
 <script src="./js/jquery-1.11.3.min.js"></script>
 <script src="./js/jquery.cookie.js"></script>
 <script src="./layui/layui.js"></script>
+<script src="./js/echarts.js"></script>
+<script src="./js/config_lang.js"></script>
+<script src="./js/function.js"></script>
 <script src="./js/header.js"></script>
 
 <!--下载word-->
 <script src="./js/FileSaver.js"></script>
 <script src="./js/jquery.wordexport.js"></script>
-<script type="text/javascript">
-    jQuery(document).ready(function($) {
-        $("a.word_export").click(function(event) {
-            $("#page_content").wordExport("报表");
-        });
-    });
-</script>
+<script src="./js/report_form.js"></script>
 
 <script>
-    layui.use('laydate', function(){
-        var laydate = layui.laydate;
 
-        //执行一个laydate实例
-        laydate.render({
-            elem: '#start' //指定元素
-        });
-        laydate.render({
-            elem: '#end' //指定元素
-        });
-    });
 </script>
 </html>
