--- a/report_form.html
+++ b/report_form.html
@@ -13,8 +13,9 @@
         }
         .content{
             width: 1000px;
-            margin: 70px auto;
+            margin: 60px auto 20px;
             background: #fff;
+            padding: 0 0 150px 0;
         }
         .date_form ul{
             padding: 20px;
@@ -33,6 +34,35 @@
             height: 20px;
             padding: 0 0 0 2px;
             margin-right: 50px;
+        }
+
+        #page_content{
+            padding: 50px;
+            display: none;
+        }
+        .page1{
+            display: none;
+        }
+        /*.page2,.page3,.page4,.page5{
+            display: none;
+        }*/
+        td{
+            text-align:center;
+            padding: 5px 8px;
+        }
+        .page6>div{
+            width: 800px;
+            height: 350px;
+        }
+        .page6 img{
+            width: 800px;
+            height: 350px;
+        }
+        .img_none{
+            display: none;
+        }
+        .xiazai{
+            visibility:hidden;
         }
     </style>
 </head>
@@ -77,17 +107,196 @@
                 </li>
             </ul>
         </div>
-        <div style="height: 300px">
-            <div id="page_content">
+        <div style="height: 2px;background: #c6c6c6;margin-bottom: 50px"></div>
+        <div class="goto_top" style="position: fixed;bottom:50px;right: 140px;display: none">
+            <img style="width:46px;height:46px;cursor:pointer" src="./img/word/top.png" alt="">
+        </div>
+        <div id="page_content">
+            <div class="page1" style="margin: 200px 0">
+                <p style="text-align: center;font-size: 36px;"></p>
+                <p style="text-align: center;font-size: 36px; margin-bottom: 400px"></p>
+                <p style="text-align: center;font-size: 18px;margin-top: 80px;"></p>
+                <p style="font-size: 18px;text-align: center;padding-bottom: 50px;"></p>
+            </div>
+            <div class="page2">
+                <h3 style="font-size: 22px"></h3>
+                <pre></pre>
+                <div style="width:560px;margin:20px auto">
+                    <img width="554" height="500" src="./img/word/p1.png" alt="">
+                    <p class="p1_text" style="text-align: center"></p>
+                </div>
+            </div>
+            <div class="page3">
+                <h3 style="font-size: 22px;margin-top: 20px"></h3>
+                <pre></pre>
+                <div style="width:560px;margin:20px auto">
+                    <img width="554" height="500" src="./img/word/图片1-2.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-3.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-4.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-5.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-6.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-7.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                    <img width="554" height="420" src="./img/word/图片1-8.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 10px"></p>
+                </div>
+
+            </div>
+            <div class="page4">
+                <pre></pre>
+                <div style="width:560px;margin:20px auto">
+                    <img width="554" height="660" src="./img/word/图片1-9.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 20px"></p>
+                    <img width="554" height="660" src="./img/word/图片1-10.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 20px"></p>
+                    <img width="554" height="650" src="./img/word/图片1-11.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 20px"></p>
+                    <img width="554" height="650" src="./img/word/图片1-12.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 20px"></p>
+                    <img width="554" height="660" src="./img/word/图片1-13.png" alt="">
+                    <p class="" style="text-align: center;margin-bottom: 20px"></p>
+                </div>
+                <pre></pre>
+            </div>
+            <div class="page5">
+                <h3 style="font-size: 22px;margin-top: 20px"></h3>
+                <p class="maxValue" style="text-indent:2em;">本次监测周期内，2#塔、3#塔各监测项目均无异常，其中2#塔：差异沉降累计变化值最大测点为静力水准仪J8点，累计变化值为-14.669，其变化速率为-0.001；倾斜累计变化值最大测点为倾角计Q5-Y点，累计变化值为-0.07，其变化速率为0.0；位移累计变化值最大测点为W1-Y点，累计变化值为-0.007，其变化速率为0.0。3#塔：差异沉降累计变化值最大测点为静力水准仪J4点，累计变化值为-13.842，其变化速率为-0.011；倾斜累计变化值最大测点为倾角计Q4-X点，累计变化值为-0.066，其变化速率为0.0；位移累计变化值最大测点为W21-X点，累计变化值为0.007，其变化速率为0.0；裂缝累计变化值最大测点为裂缝计L2点，累计变化值为1.68，其变化速率为0.005。详见表3-1、表3-2。</p>
+                <p class="" style="text-align: center;margin-top: 20px"></p>
+                <table class="ta1"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;">
+                    <tr>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border: 1px solid">差异沉降</td>
+                        <td style="text-align: center;border: 1px solid">静力水准仪--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">静力水准仪--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid"></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border: 1px solid">倾斜</td>
+                        <td style="text-align: center;border: 1px solid">倾角计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">倾角计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid"></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border: 1px solid">裂缝</td>
+                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid"></td>
+                    </tr>
+                </table>
+                <p class="" style="text-align: center;margin-top: 20px"></p>
+                <table class="ta2"  border="1" cellspacing="0" style="border: 1px solid;margin: auto;">
+                    <tr>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">监测项目</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化值最大测点变化值</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大测点</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">累计变形值最大值</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">变化速率</td>
+                        <td style="text-align: center;border: 1px solid;background: #8facf4">备注</td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border: 1px solid">倾斜</td>
+                        <td style="text-align: center;border: 1px solid">倾角计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">倾角计--</td>
+                        <td style="text-align: center;border: 1px solid">--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid"></td>
+                    </tr>
+                    <tr>
+                        <td style="text-align: center;border: 1px solid">裂缝</td>
+                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">裂缝计--</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid">-</td>
+                        <td style="text-align: center;border: 1px solid"></td>
+                    </tr>
+                </table>
+            </div>
+            <div class="page6">
+                <h3 style="font-size: 22px;margin-top: 20px"></h3>
+                <p></p>
+                <p>1）<span class="word_A">倾角传感器</span></p>
+                <div id="q1"></div>
+                <div class="img_none">
+                    <img id="q1_img" width="550" height="240" src="" alt="">
+                </div>
+                <p style="text-align: center;margin-bottom: 16px" class="tu4_1"></p>
+                <div id="q2"></div>
+                <div class="img_none">
+                    <img id="q2_img" width="550" height="240" src="" alt="">
+                </div>
+                <p style="text-align: center;margin-bottom: 16px" class="tu4_2"></p>
+                <p>2）<span class="word_C">裂缝</span></p>
+                <div id="l1"></div>
+                <div class="img_none">
+                    <img id="l1_img" width="550" height="240" src="" alt="">
+                </div>
+                <p style="text-align: center;margin-bottom: 16px" class="tu4_3"></p>
+                <div id="l2"></div>
+                <div class="img_none">
+                    <img id="l2_img" width="550" height="240" src="" alt="">
+                </div>
+                <p style="text-align: center;margin-bottom: 16px" class="tu4_4"></p>
+                <p>3）<span class="word_D">差异沉降</span></p>
+                <div id="j1"></div>
+                <div class="img_none">
+                    <img id="j1_img" width="550" height="240" src="" alt="">
+                </div>
+                <p style="text-align: center;margin-bottom: 16px" class="tu4_5"></p>
+            </div>
+            <div class="page7">
+                <h3 style="font-size: 22px;margin-top: 20px"></h3>
+                <div style="width:560px;margin:20px auto">
+                    <p class="tu_min" style="text-align: right">
+                        <img style="margin-left: 18px" width="20" height="20"  src="./img/word/lie.jpg" alt=""><i></i>
+                        <img style="margin-left: 18px" width="20" height="20"  src="./img/word/jing.jpg" alt=""><i></i>
+                        <img style="margin-left: 18px" width="20" height="20"  src="./img/word/qing.jpg" alt=""><i></i>
+                    </p>
+                    <img width="554" height="480" src="./img/word/图片5-1.png" alt="">
+                    <p class="p5_1" style="text-align: center;margin-bottom: 20px"></p>
+                    <img width="267" height="267" src="./img/word/p222.png" alt="">
+                    <img width="267" height="267" src="./img/word/p333.png" alt="">
+                    <p class="p5_2" style="text-align: center;margin-bottom: 20px"></p>
+
+                </div>
+            </div>
+        </div>
+        <div style="height: 300px;display: none">
+            <div id="page_content_test">
 
                 <p>这是一段文字</p>
-                <img src="./img/dataImg/t2_l.png" alt="" style="height: 200px">
+                <img src="./img/dataImg/ta2_1.png" alt="" style="height: 200px">
                 <div class="" style="width: 500px;height: 300px;border: 2px solid #f00;
                      display: none" id="aaa">
                 </div>
                 <div style="width: 500px;height: 300px;border: 2px solid #0000FF;background: white;" >
                     <img style="width: 500px;height: 300px;" id="a" src="" alt="">
                 </div>
+                ^
                 <div id="ntexport">下载测试</div>
                 <table border="1">
                     <tr>
@@ -124,6 +333,19 @@
 <script src="./js/report_form.js"></script>
 
 <script>
+    $(document).scroll(function() {
+        var scroH = $(document).scrollTop();  //滚动高度
+        
+        if(scroH >500){
+            $('.goto_top').fadeIn(1000)
+        }else {
+            $('.goto_top').fadeOut(500)
+        }
+    });
+    $('.goto_top').click(function () {
+        $('html ,body').animate({scrollTop: 0}, 800);
+        return false;
+    })
 
 </script>
 </html>
