--- a/monitor.html
+++ b/monitor.html
@@ -11,11 +11,11 @@
     <style>
         body{
             background: #f6f6f6;
-            min-width: 1000px;
+            min-width: 1100px;
         }
         .content{
             /*border: 1px solid;*/
-            width: 1000px;
+            width: 1100px;
             margin: 0 auto;
             display: flex;
             position: relative;
@@ -41,8 +41,8 @@
             border-color: transparent;
         }
         .right{
-            width: 804px;
-            padding: 0 0 20px 16px;
+            width: 884px;
+            padding: 0 0 20px 36px;
             box-sizing: border-box;
             position: absolute;
             left: 196px;
@@ -192,7 +192,7 @@
 
     </style>
 </head>
-<body>
+<body style="font-family:MyMM;">
     <div class="header">
     <div class="header_content">
         <div class="header_left">
@@ -210,7 +210,7 @@
             </ul>
         </div>
         <div class="header_right">
-            <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
+            <div style="display: none" class="user"><i>用户名</i><span></span></div>
             <div class="logout"></div>
             <ul class="language">
                 <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
