--- a/alarm.html
+++ b/alarm.html
@@ -10,10 +10,10 @@
     <style>
         body {
             background: #f6f6f6;
-            min-width: 1000px;
+            min-width: 1100px;
         }
         .content{
-            width: 1000px;
+            width: 1100px;
             margin: 70px auto;
             background: #fff;
             padding-bottom: 16px;
@@ -26,7 +26,7 @@
         }
     </style>
 </head>
-<body>
+<body style="font-family:MyMM;">
     <div class="header">
     <div class="header_content">
         <div class="header_left">
@@ -44,7 +44,7 @@
             </ul>
         </div>
         <div class="header_right">
-            <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
+            <div style="display: none" class="user"><i>用户名</i><span></span></div>
             <div class="logout"></div>
             <ul class="language">
                 <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
