--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     <link rel="icon" type="image/x-icon" href="./img/favicon.ico"/>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./layui/css/layui.css">
-    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/header.css" type="text/css">
     <script src="./js/config_lang.js"></script>
     <title>缅甸佛塔监测系统</title>
     <style>
         html,body{
             height: 100%;
             background-color: #eee;
-            min-width: 960px;
+            min-width: 1100px;
         }
         .body{
             width: 100%;
@@ -27,7 +27,7 @@
         }
     </style>
 </head>
-<body>
+<body style="font-family:MyMM;">
     <div class="header">
         <div class="header_content">
             <div class="header_left">
@@ -45,7 +45,7 @@
                 </ul>
             </div>
             <div class="header_right">
-                <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
+                <div style="display: none" class="user"><i>用户名</i><span></span></div>
                 <div class="logout"></div>
                 <ul class="language">
                     <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
