--- a/report_form.html
+++ b/report_form.html
@@ -10,10 +10,10 @@
     <style>
         body {
             background: #f6f6f6;
-            min-width: 1000px;
+            min-width: 1100px;
         }
         .content{
-            width: 1000px;
+            width: 1100px;
             margin: 60px auto 20px;
             background: #fff;
             padding: 0 0 150px 0;
@@ -30,7 +30,8 @@
             text-align: right;
         }
         .date_form input{
-            background: transparent url("./img/ico/date.png") no-repeat 138px center;
+            width: 200px;
+            background: transparent url("./img/ico/date.png") no-repeat 184px center;
             border: 1px solid #c8c8c8;
             height: 20px;
             padding: 0 0 0 2px;
@@ -67,7 +68,7 @@
         }
     </style>
 </head>
-<body>
+<body  style="font-family:MyMM;">
     <div class="header">
     <div class="header_content">
         <div class="header_left">
@@ -85,7 +86,7 @@
             </ul>
         </div>
         <div class="header_right">
-            <div style="display: none" class="user"><i>用户名</i>：<span></span></div>
+            <div style="display: none" class="user"><i>用户名</i><span></span></div>
             <div class="logout"></div>
             <ul class="language">
                 <li class="language_btn"><a onclick="changeLang('zh')" href="javascript:;">中文</a></li>
